Fix DoDetect.isExecuteSu()